--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,11 @@ jobs:
           name: Install and configure dependencies
           command: |
             npm install gh-pages --save-dev
-            git config user.email "fikfikky@gmail.com"
-            git config user.name "coderonfleek"
+            git config user.email "ndagis@gmail.com"
+            git config user.name "NdagiStanley"
+      - add_ssh_keys:
+          fingerprints:
+            - "a6:e1:ea:be:69:7a:e3:09:18:4d:05:2a:25:ab:a1:e5"
       - run:
           name: Deploy docs to gh-pages branch
           command: './node_modules/.bin/gh-pages --dotfiles --message "[skip ci] Updates" -d dist'
